Avoid OS specific configuration

--- a/bugs/array-copy-node/8302850/Makefile
+++ b/bugs/array-copy-node/8302850/Makefile
@@ -11,8 +11,6 @@ JDK_HOME ?= $(HOME)/1/jdk
 capstone_home = $(opt)/capstone
 capstone_makefile = $(capstone_home)/Makefile
 capstone_lib = $(capstone_home)/libcapstone.a
-capstone_lib_os = $(capstone_home)/$(capstone_lib_os_name)
-capstone_lib_os_name = libcapstone.5.dylib
 conf_args += --with-boot-jdk=$(BOOT_JDK_HOME)
 conf_args += --with-jmh=build/jmh/jars
 dot_jmh = $(JDK_HOME)/build/jmh/jars/.jmh
@@ -32,11 +30,11 @@ usr_local := /usr/local
 test_copy = TestArrayCopy.java
 test_clone = TestArrayClone.java
 
-run-clone: $(java) $(test_clone) $(capstone_lib_os)
+run-clone: $(java) $(test_clone) $(capstone_lib)
 > LD_LIBRARY_PATH=$(capstone_home) $< $(jvm_args) -XX:CompileOnly=TestArrayClone.test $(test_clone)
 .PHONY: run-clone
 
-run-copy: $(java_fast) $(test_copy) $(capstone_lib_os)
+run-copy: $(java_fast) $(test_copy) $(capstone_lib)
 > LD_LIBRARY_PATH=$(capstone_home) $< $(jvm_args) -XX:CompileOnly=TestArrayCopy.test $(test_copy)
 .PHONY: run-copy
 
@@ -58,7 +56,7 @@ $(java_release):
 > cd $(JDK_HOME)
 > CONF=$(CONF_RELEASE) make
 
-config-fast: $(dot_jmh) $(capstone_lib_os)
+config-fast: $(dot_jmh) $(capstone_lib)
 > cd $(JDK_HOME)
 > bash configure \
 >   $(conf_args) \
@@ -76,7 +74,7 @@ config-release: $(dot_jmh)
 >   --with-conf-name=$(CONF_RELEASE)
 .PHONY: config-release
 
-config-slow: $(dot_jmh) $(capstone_lib_os)
+config-slow: $(dot_jmh) $(capstone_lib)
 > cd $(JDK_HOME)
 > bash configure \
 >   $(conf_args) \
@@ -97,10 +95,7 @@ $(dot_jmh):
 > sh make/devkit/createJMHBundle.sh
 > touch $@
 
-$(capstone_lib_os_name): $(capstone_lib_os)
-> ln -s $<
-
-$(capstone_lib_os): $(capstone_makefile)
+$(capstone_lib): $(capstone_makefile)
 > cd $(capstone_home)
 > ./make.sh
 
