Use absolute paths in java files

--- a/bugs/array-copy-node/8302850/Makefile
+++ b/bugs/array-copy-node/8302850/Makefile
@@ -7,11 +7,16 @@ CONF_RELEASE ?= release
 CONF_SLOW ?= slow
 JDK_HOME ?= $(HOME)/1/jdk
 
+args_clone += -XX:CompileOnly=TestArrayClone.test
+args_clone += $(current_dir)/$(test_clone)
+args_copy += -XX:CompileOnly=TestArrayCopy.test
+args_copy += $(current_dir)/$(test_copy)
 capstone_home = $(opt)/capstone
 capstone_makefile = $(capstone_home)/Makefile
 capstone_lib = $(capstone_home)/libcapstone.a
 conf_args += --with-boot-jdk=$(BOOT_JDK_HOME)
 conf_args += --with-jmh=build/jmh/jars
+current_dir = $(shell pwd)
 dot_jmh = $(JDK_HOME)/build/jmh/jars/.jmh
 java_fast = $(JDK_HOME)/build/$(CONF_FAST)/jdk/bin/java
 java_release = $(JDK_HOME)/build/$(CONF_RELEASE)/jdk/bin/java
@@ -30,19 +35,19 @@ test_copy = TestArrayCopy.java
 test_clone = TestArrayClone.java
 
 run-clone: $(java_fast) $(test_clone) $(capstone_lib)
-> LD_LIBRARY_PATH=$(capstone_home) $< $(jvm_args) -XX:CompileOnly=TestArrayClone.test $(test_clone)
+> LD_LIBRARY_PATH=$(capstone_home) $< $(jvm_args) $(args_clone)
 .PHONY: run-clone
 
 gdb-clone: $(java_slow) $(test_clone) $(capstone_lib)
-> LD_LIBRARY_PATH=$(capstone_home) gdb --args $< $(jvm_args) -XX:CompileOnly=TestArrayClone.test $(test_clone)
+> LD_LIBRARY_PATH=$(capstone_home) gdb --args $< $(jvm_args) $(args_clone)
 .PHONY: gdb-clone
 
 run-copy: $(java_fast) $(test_copy) $(capstone_lib)
-> LD_LIBRARY_PATH=$(capstone_home) $< $(jvm_args) -XX:CompileOnly=TestArrayCopy.test $(test_copy)
+> LD_LIBRARY_PATH=$(capstone_home) $< $(jvm_args) $(args_copy)
 .PHONY: run-copy
 
 gdb-copy: $(java_slow) $(test_copy) $(capstone_lib)
-> LD_LIBRARY_PATH=$(capstone_home) gdb --args $< $(jvm_args) -XX:CompileOnly=TestArrayCopy.test $(test_copy)
+> LD_LIBRARY_PATH=$(capstone_home) gdb --args $< $(jvm_args) $(args_copy)
 .PHONY: gdb-copy
 
 $(java_fast): $(shell find $(JDK_HOME)/src -type f -name '*.java')
