Make jdk build directories include os and cpu info

--- a/bugs/array-copy-node/8302850/Makefile
+++ b/bugs/array-copy-node/8302850/Makefile
@@ -1,6 +1,9 @@
 TOPDIR = ../../..
 include $(TOPDIR)/make/common/MakeBase.gmk
 
+os = $(shell uname | tr A-Z a-z)
+cpu = $(shell uname -m | tr A-Z a-z)
+
 BOOT_JDK_HOME ?= $(opt)/java-21
 CONF_FAST ?= fast
 CONF_RELEASE ?= release
@@ -16,11 +19,14 @@ capstone_makefile = $(capstone_home)/Makefile
 capstone_lib = $(capstone_home)/libcapstone.a
 conf_args += --with-boot-jdk=$(BOOT_JDK_HOME)
 conf_args += --with-jmh=build/jmh/jars
+conf_fast_dir = $(CONF_FAST)-$(os)-$(cpu)
+conf_release_dir = $(CONF_RELEASE)-$(os)-$(cpu)
+conf_slow_dir = $(CONF_SLOW)-$(os)-$(cpu)
 current_dir = $(shell pwd)
 dot_jmh = $(JDK_HOME)/build/jmh/jars/.jmh
-java_fast = $(JDK_HOME)/build/$(CONF_FAST)/jdk/bin/java
-java_release = $(JDK_HOME)/build/$(CONF_RELEASE)/jdk/bin/java
-java_slow = $(JDK_HOME)/build/$(CONF_SLOW)/jdk/bin/java
+java_fast = $(JDK_HOME)/build/$(conf_fast_dir)/jdk/bin/java
+java_release = $(JDK_HOME)/build/$(conf_release_dir)/jdk/bin/java
+java_slow = $(JDK_HOME)/build/$(conf_slow_dir)/jdk/bin/java
 jvm_args += -XX:-UseOnStackReplacement
 jvm_args += -XX:-BackgroundCompilation
 jvm_args += -XX:TieredStopAtLevel=1
@@ -50,23 +56,24 @@ gdb-copy: $(java_slow) $(test_copy) $(capstone_lib)
 > LD_LIBRARY_PATH=$(capstone_home) gdb --args $< $(jvm_args) $(args_copy)
 .PHONY: gdb-copy
 
+
 $(java_fast): $(shell find $(JDK_HOME)/src -type f -name '*.java')
 $(java_fast): $(shell find $(JDK_HOME)/test -type f -name '*.java')
 $(java_fast):
 > cd $(JDK_HOME)
-> CONF=$(CONF_FAST) make
+> CONF=$(conf_fast_dir) make
 
 $(java_slow): $(shell find $(JDK_HOME)/src -type f -name '*.java')
 $(java_slow): $(shell find $(JDK_HOME)/test -type f -name '*.java')
 $(java_slow):
 > cd $(JDK_HOME)
-> CONF=$(CONF_slOW) make
+> CONF=$(conf_slow_dir) make
 
 $(java_release): $(shell find $(JDK_HOME)/src -type f -name '*.java')
 $(java_release): $(shell find $(JDK_HOME)/test -type f -name '*.java')
 $(java_release):
 > cd $(JDK_HOME)
-> CONF=$(CONF_RELEASE) make
+> CONF=$(conf_release_dir) make
 
 config-fast: $(dot_jmh) $(capstone_lib)
 > cd $(JDK_HOME)
@@ -74,7 +81,7 @@ config-fast: $(dot_jmh) $(capstone_lib)
 >   $(conf_args) \
 >   --enable-hsdis-bundling \
 >   --with-capstone=$(capstone_home) \
->   --with-conf-name=$(CONF_FAST) \
+>   --with-conf-name=$(conf_fast_dir) \
 >   --with-debug-level=fastdebug \
 >   --with-hsdis=capstone
 .PHONY: config-fast
@@ -83,7 +90,7 @@ config-release: $(dot_jmh)
 > cd $(JDK_HOME)
 > bash configure \
 >   $(conf_args) \
->   --with-conf-name=$(CONF_RELEASE)
+>   --with-conf-name=$(conf_release_dir)
 .PHONY: config-release
 
 config-slow: $(dot_jmh) $(capstone_lib)
@@ -91,15 +98,16 @@ config-slow: $(dot_jmh) $(capstone_lib)
 > bash configure \
 >   $(conf_args) \
 >   --enable-hsdis-bundling \
+>   --disable-precompiled-headers \
 >   --with-capstone=$(capstone_home) \
->   --with-conf-name=$(CONF_SLOW) \
+>   --with-conf-name=$(conf_slow_dir) \
 >   --with-debug-level=slowdebug \
 >   --with-hsdis=capstone
 .PHONY: config-slow
 
 reconfig-slow:
 > cd $(JDK_HOME)
-> CONF=slow make reconfigure
+> CONF=$(conf_slow_dir) make reconfigure
 .PHONY: config-slow
 
 $(dot_jmh):
@@ -117,20 +125,20 @@ $(capstone_makefile):
 
 commands:
 > cd $(JDK_HOME)
-> CONF=$(CONF_FAST) make compile-commands
+> CONF=$(conf_slow_dir) make compile-commands
 .PHONY: commands
 
 build:
 > cd $(JDK_HOME)
-> CONF=$(CONF_FAST) make
+> CONF=$(conf_slow_dir) make
 .PHONY: build
 
 micro: $(java_release)
 > cd $(JDK_HOME)
-> CONF=$(CONF_RELEASE) make test TEST="micro:java.lang.ArrayClone" MICRO="JAVA_OPTIONS=-XX:TieredStopAtLevel=1"
+> CONF=$(conf_release_dir) make test TEST="micro:java.lang.ArrayClone" MICRO="JAVA_OPTIONS=-XX:TieredStopAtLevel=1"
 .PHONY: micro
 
 clean:
 > cd $(JDK_HOME)
-> CONF=$(CONF_FAST) make clean
+> CONF=$(conf_slow_dir) make clean
 .PHONY: clean
