Add clean target for 686

--- a/bugs/array-copy-node/8302850/Makefile
+++ b/bugs/array-copy-node/8302850/Makefile
@@ -284,3 +284,8 @@ clean-fast:
 > cd $(JDK_HOME)
 > CONF=$(conf_fast_dir) make clean
 .PHONY: clean-fast
+
+clean-686:
+> cd $(JDK_HOME)
+> CONF=$(conf_686_slow_dir) make clean
+.PHONY: clean-686
