Add 686 release clean target

--- a/bugs/array-copy-node/8302850/Makefile
+++ b/bugs/array-copy-node/8302850/Makefile
@@ -319,3 +319,8 @@ clean-686:
 > cd $(JDK_HOME)
 > CONF=$(conf_686_slow_dir) make clean
 .PHONY: clean-686
+
+clean-686-release:
+> cd $(JDK_HOME)
+> CONF=$(conf_686_release_dir) make clean
+.PHONY: clean-686-release
