Add more single tests

--- a/bugs/array-copy-node/8302850/Makefile
+++ b/bugs/array-copy-node/8302850/Makefile
@@ -288,8 +288,9 @@ test-single: $(java_slow)
 > cd $(JDK_HOME)
 # > CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/arraycopy/TestArrayCopyAsLoadsStores.java" JTREG="JAVA_OPTIONS=-XX:TieredStopAtLevel=1"
 # > CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/codecache/stress/UnexpectedDeoptimizationAllTest.java" JTREG="JAVA_OPTIONS=-XX:TieredStopAtLevel=1"
-> CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/c2/irTests/scalarReplacement/AllocationMergesTests.java"
-> CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/interpreter/Test6833129.java"
+# > CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/c2/irTests/scalarReplacement/AllocationMergesTests.java"
+# > CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/interpreter/Test6833129.java" JTREG="JAVA_OPTIONS=-XX:CompileOnly=compiler/interpreter/Test6833129.clone_and_verify"
+> CONF=$(conf_slow_dir) make test TEST="test/hotspot/jtreg/compiler/c1/TestNullArrayClone.java"
 .PHONY: test-single
 
 ap-clone: $(java_slow) $(test_clone) $(capstone_lib) $(ap_agent)
